fix custom page spacing below page header #59

--- a/includes/assets/css/about.less
+++ b/includes/assets/css/about.less
@@ -10,11 +10,16 @@
 		}
 	}
 
-	& .about-section {
+	& .about-area {
 		background: #fff;
+		padding-bottom: 4rem;
+
+		@media all and ( min-width: 992px ) {
+			padding-top: 1.5rem;
+		}
 
 		@media all and ( min-width: 1200px ) {
-			padding: 5rem 0 7rem;
+			padding-top: 3rem;
 		}
 
 		& .quick-facts {
